Fixed margin and padding spacing, updated page values, etc.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,15 @@
 #meteorite-landings_map {
-	padding-top: 4%;
-	padding-left: 10%;
-	padding-right: 10%;
-	padding-bottom: 5%;
+	margin: 5%;
 }
 
 #fallen-found_pie {
-	padding-top: 5%;
-	padding-left: 10%;
-	padding-right: 10%;
-	
+	margin: 5%;
+	margin-left: 10;
+}
+
+#interactive_vis {
+	align-self: center;
+	margin: 5%;
 }
 
 #heading {
@@ -28,27 +28,34 @@
 text-align: center; /* Center-align the text horizontally */
 font-family: Georgia, serif; /* Use the Georgia font */
 color: white; /* Set the text color to white */
-padding-left: 20%;
-padding-right: 20%;
-padding-bottom: 5%;
+margin-bottom: 5%;
+margin-left: 10%;
+margin-right: 10%;
 }
 
 .paragraph {
 	font-family: Georgia, serif;
 	color: white;
-	padding-left: 10%;
-	padding-right: 10%;
 }
 
 .header {
 	font-family: Georgia, serif;
 	color: white;
-	padding-left: 10%;
-	padding-right: 10%;
 }
 
 .page {
-	width: 1280px;
+	width: 1400px;
 	margin: auto;
-	padding-top: 35px;
+	box-shadow: 0px 0px 50px 10px gray;
+	padding-left: 5%;
+	padding-right: 5%;
+
+}
+
+.center {
+	justify-content: center;
+}
+
+label {
+	color: white;
 }
